apps/authelia/authelia-valkey-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia-valkey
  namespace: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia-valkey
  template:
    metadata:
      labels:
        app: authelia-valkey
    spec:
      nodeSelector:
        kubernetes.io/hostname: borgling-1
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: valkey
          image: valkey/valkey:8
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
