apps/authelia/authelia-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia-postgres
  namespace: authelia
spec:
  selector:
    app: authelia-postgres
  ports:
    - port: 5432
      targetPort: 5432
