apps/authelia/authelia-valkey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia-valkey
  namespace: authelia
spec:
  selector:
    app: authelia-valkey
  ports:
    - port: 6379
      targetPort: 6379
