apps/authelia/authelia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia-ingress
  namespace: authelia
  annotations:
    nginx.org/proxy-read-timeout: "360"
    nginx.org/proxy-send-timeout: "360"
spec:
  ingressClassName: nginx
  rules:
    - host: authelia.th3borg.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authelia
                port:
                  number: 9091
